hardware and aframe

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+a-scene {
+  height: 300px;
+  width: 600px;
+}
+
 body {
   font-family: var(--font-default);
   color: var(--color-default);
@@ -1172,6 +1177,7 @@ section {
   right: 8px;
   opacity: 1;
 }
+
 
 /*--------------------------------------------------------------
 # Book A Table Section
