--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,10 +32,12 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-a-scene {
+#a-scene {
   height: 300px;
   width: 600px;
+  margin: 0 auto;
 }
+
 
 body {
   font-family: var(--font-default);
